# fedxgb-mvs

./: .gitignore  README.md  pyproject.toml
src/fedboost_mvs/: __init__.py  client_app.py  server_app.py  task.py
tests/: README.md  conftest.py  test_federated_run.py
